[package]
name = "lumen-prism"
version = "0.1.0"
edition = "2021"
authors = ["Tran Manh Duy <tmd.iid2004@gmail.com>"]
description = "Secure Multi-Party Computation (MPC) framework"
license = "MIT"
repository = "https://github.com/Tranduy1dol/lumen-prism"
keywords = ["cryptography", "mpc", "multi-party-computation", "rust"]
categories = ["cryptography"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
